--- a/style.css
+++ b/style.css
@@ -96,3 +96,12 @@ body {
     text-align: center;
 }
 
+#confirm-btn {
+    width: 6rem;
+    font-size: 1rem;
+}
+
+.km-number {
+    font-weight: 600;
+    color: crimson;
+}
